--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.51'
+    ext.kotlin_version = '1.2.61'
     repositories {
         google()
         jcenter()
@@ -22,6 +22,17 @@ allprojects {
     }
 }
 
+ext {
+    support_version = "28.+"
+    toothpick_version = "1.1.3"
+    retrofit_version = "2.2.0"
+    okhttp_version = "3.7.0"
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+repositories {
+    google()
 }
