--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,10 @@ dependencies {
 
     implementation "com.github.bumptech.glide:glide:3.8.0"
 
-    implementation "com.github.stephanenicolas.toothpick:toothpick-runtime:$toothpick_version"
-    implementation "com.github.stephanenicolas.toothpick:smoothie:$toothpick_version"
-    kapt "com.github.stephanenicolas.toothpick:toothpick-compiler:$toothpick_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.25.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.25.3'
+
+    implementation 'ru.gildor.coroutines:kotlin-coroutines-retrofit:0.12.0'
 
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
@@ -47,6 +48,11 @@ dependencies {
     implementation("com.squareup.retrofit2:retrofit:$retrofit_version") {
         exclude module: 'okhttp'
     }
+
+    implementation "com.github.stephanenicolas.toothpick:toothpick-runtime:$toothpick_version"
+    implementation "com.github.stephanenicolas.toothpick:smoothie:$toothpick_version"
+    kapt "com.github.stephanenicolas.toothpick:toothpick-compiler:$toothpick_version"
+
 
     implementation "ru.terrakok.cicerone:cicerone:3.0.0"
 
