--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$support_version"
     implementation "com.android.support:recyclerview-v7:$support_version"
 
-    implementation "com.github.bumptech.glide:glide:3.8.0"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.25.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.25.3'
@@ -52,7 +52,6 @@ dependencies {
     implementation "com.github.stephanenicolas.toothpick:toothpick-runtime:$toothpick_version"
     implementation "com.github.stephanenicolas.toothpick:smoothie:$toothpick_version"
     kapt "com.github.stephanenicolas.toothpick:toothpick-compiler:$toothpick_version"
-
 
     implementation "ru.terrakok.cicerone:cicerone:3.0.0"
 
