--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.android.tools.build:gradle:3.1.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -27,6 +27,7 @@ ext {
     toothpick_version = "1.1.3"
     retrofit_version = "2.2.0"
     okhttp_version = "3.7.0"
+    glide_version = "4.7.1"
 }
 
 task clean(type: Delete) {
