--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:$support_version"
 
     implementation "com.github.bumptech.glide:glide:$glide_version"
+    implementation 'com.github.chrisbanes:PhotoView:2.1.4'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.25.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.25.3'
