--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 
     implementation "com.android.support:appcompat-v7:$support_version"
     implementation "com.android.support:recyclerview-v7:$support_version"
+    implementation "com.android.support:design:$support_version"
 
     implementation "com.github.bumptech.glide:glide:$glide_version"
     implementation 'com.github.chrisbanes:PhotoView:2.1.4'
