--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:$support_version"
     implementation "com.android.support:design:$support_version"
 
+    implementation "android.arch.paging:runtime:1.0.0"
+
     implementation "com.github.bumptech.glide:glide:$glide_version"
     implementation 'com.github.chrisbanes:PhotoView:2.1.4'
 
